# rspotify-bench

./: .env-new  .env-old  README.md  compare_execution.sh  compare_repo.sh  compare_stats.sh  compare_time.sh  compare_user.sh
bench_new_async/: .env  Cargo.toml
bench_new_async/benches/: basic.rs
bench_new_async/report/: index.html
bench_new_async/src/: lib.rs  main.rs
bench_new_blocking/: Cargo.toml
bench_new_blocking/benches/: basic.rs
bench_new_blocking/report/: index.html
bench_new_blocking/src/: lib.rs  main.rs
bench_old_async/: Cargo.toml
bench_old_async/benches/: basic.rs
bench_old_async/report/: index.html
bench_old_async/src/: lib.rs  main.rs
bench_old_blocking/: .env  Cargo.toml
bench_old_blocking/benches/: basic.rs
bench_old_blocking/report/: index.html
bench_old_blocking/src/: lib.rs  main.rs
rspotify-0.10.0-patched/: .cargo_vcs_info.json  Cargo.toml
rspotify-0.10.0-patched/src/: oauth2.rs
rspotify-0.10.0-patched/src/blocking/: oauth2.rs
